k8s/base/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: devops-data-platform
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: devops-data-platform 
  template:
    metadata: 
      labels: 
        app: devops-data-platform
    spec: 
      containers:
        - name: devops-data-platform
          image: yakirade/devops-data-platform:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health 
              port: 8080 
            initialDelaySeconds: 5 
            periodSeconds: 10 
          livenessProbe:
            httpGet: 
              path: /health 
              port: 8080 
            initialDelaySeconds: 15 
            periodSeconds: 20 
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
